@@ -1,11 +1,11 @@
-ARG APP_INSIGHTS_AGENT_VERSION=2.5.1
+ARG APP_INSIGHTS_AGENT_VERSION=3.4.14
+FROM hmctspublic.azurecr.io/base/java:17-distroless
 
-# Application image
-
-FROM hmctspublic.azurecr.io/base/java:11-distroless
-
-COPY lib/AI-Agent.xml /opt/app/
+COPY lib/applicationinsights.json /opt/app/
 COPY build/libs/notifications-service.jar /opt/app/
 
 EXPOSE 8080
-CMD [ "notifications-service.jar" ]
+CMD [ \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "notifications-service.jar" \
+    ]
